--- a/assets/css/perfil.css
+++ b/assets/css/perfil.css
@@ -11,6 +11,7 @@ html {
 
 body {
     overflow-x: hidden;
+    /* overflow: hidden; */
 }
 
 header {
@@ -110,30 +111,39 @@ a:hover {
     border-radius: 5px; */
     opacity: 0.7;
 }
-
-.perfil-container {
-    width: 68%;
-    min-height: 300px;
-    display: block;
-    margin: 20px auto;
-    border: 2px solid #4c83d4;
-    border-radius: 5px;
-}
-.perfil{
-    margin-top: 20px;
+main{
     width: 100%;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.perfil-container {
+    width: 70%;
+    height: 80%;
+    border: 2px solid #4c83d4;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.perfil{
+    /* margin-top: 20px; */
+    width: 50%;
+    margin-left: 50px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
 .foto{
     margin: 5px;
     width: 30%;
+    margin-left: 65px;
 }
 .foto #fotoperfil{
     width: 200px;
     height: 200px;
-    border-radius: 5px;
+    border-radius: 50%;
     object-fit: cover;
 }
 
@@ -146,7 +156,6 @@ a:hover {
 }
 
 .info h1{
-    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
 }
@@ -154,14 +163,20 @@ a:hover {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     margin-bottom: 30px;
-    color: #303030;
+    color: #ffffff;
+    background-color: #002a77;
+    padding: 5px;
+    width: 100px;
+    border-radius: 10px;
 }
 
 .botoes {
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 40%;
+    height: 50%;
+    display: grid;
+    grid-template-columns: (1, 4fr);
+    gap: 1px;
+    margin-bottom: 45px;
 }
 
 .botoes a {
@@ -169,9 +184,9 @@ a:hover {
     box-shadow: 2px 5px 6px rgb(119, 121, 121);
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 10px;
     border-radius: 5px;
     width: 200px;
+    height: 35px;
     text-align: center;
     transition: 0.3s ease-in-out;
     border: none;
@@ -192,6 +207,11 @@ a:hover {
     color: #e70000;
     background-color: #ffffff;
     box-shadow: none;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+#sair:hover{
+    transform: scale(1.05);
 }
 .voltar button{
     font-size: 13px;
@@ -206,3 +226,5 @@ a:hover {
     cursor: pointer;
     box-shadow: 0 5px 6px #61616159;
 }
+
+
